...

  [self.view addSubview:self.noticeLabel];
}

- (void)setUpEmailButtons {
  self.loginButton = [[UIButton alloc] initWithFrame:CGRectMake(kAuthorizationViewPadding, (self.noticeLabel ? (self.noticeLabel.top - kAuthorizationNoticeLabelTopMargin) : (self.view.height - kAuthorizationViewPadding)) - kAuthorizationButtonHeight, self.view.width - kAuthorizationViewPadding * 2, kAuthorizationButtonHeight)];
  self.loginButton.accessibilityIdentifier = @"Log In Button";
  [self.loginButton setTitle:@"Войти" forState:UIControlStateNormal];
  [self.loginButton addTarget:self action:@selector(loginButtonTapped) forControlEvents:UIControlEventTouchUpInside];

  self.signupButton = [[UIButton alloc] initWithFrame:CGRectMake(kAuthorizationViewPadding, self.loginButton.top - kAuthorizationButtonSpacing - kAuthorizationButtonHeight, self.view.width - kAuthorizationViewPadding * 2, kAuthorizationButtonHeight)];
  [self.signupButton setTitle:@"Зарегистрироваться" forState:UIControlStateNormal];
  self.signupButton.accessibilityIdentifier = @"Sign Up Button";
...
