...

  [self.view addSubview:self.scrollView];
}

- (void)setUpCards {
  self.meetingCard = [[NDAMeetingCard alloc] initWithFrame:CGRectMake(kDashboardViewPadding, kDashboardViewPadding, CGRectGetWidth([UIScreen mainScreen].bounds) - kDashboardViewPadding * 2, kMeetingCardHeight)];
  self.meetingCard.accessibilityIdentifier = @"Meeting Card";
  self.meetingCard.rac_command = [[RACCommand alloc] initWithSignalBlock:^(id _) {
    if (self.currentMeeting) {
      if (!self.currentMeetingViewController || self.currentMeetingViewController.meeting != self.currentMeeting) {
        self.currentMeetingViewController = [[NDAMeetingViewController alloc] initWithMeeting:self.currentMeeting];
      }
      [NDAMeetingManager sharedInstance].userMeeting[kUserHasSeenKey] = @YES;
...
